--- a/build.gradle
+++ b/build.gradle
@@ -82,12 +82,13 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final' // if you are using mapstruct in test code
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	//sentry
+	implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.9.0'
 
 	// jjwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
 
 	//gmail
 	implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.2'
