[#56] sentry를 기반으로한 모니터링 구축 (#59)
* feat: sentry

* test: ci.yaml

* test: ci.yaml

* test: ci.yaml

* feat: sentry all done

* feat: sentry all done

* feat: sentry all done

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - 'feat/#5/jwt-header'
 
 jobs:
   build:
@@ -23,7 +22,7 @@ jobs:
       - name: Decode application.yml
         run: |
           echo "${{ secrets.ENCODED_APPLICATION_YML }}" | base64 --decode > ./src/main/resources/application.yml
-
+          cat ./src/main/resources/application.yml
       - name: Grant execute permission for Gradlew
         run: chmod +x ./gradlew
 
