--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,10 @@ dependencies {
 	implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.2'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	implementation("org.springframework.retry:spring-retry")
+	implementation 'org.aspectj:aspectjrt:1.9.7'
+	implementation 'org.aspectj:aspectjweaver:1.9.7'
+
 }
 
 test {
