--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,23 +11,24 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'adopt'
+          distribution: 'temurin'
 
       - name: Decode application.yml
         run: |
           echo "${{ secrets.ENCODED_APPLICATION_YML }}" | base64 --decode > ./src/main/resources/application.yml
           cat ./src/main/resources/application.yml
+
       - name: Grant execute permission for Gradlew
         run: chmod +x ./gradlew
 
       - name: Cache Gradle packages
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.gradle/caches
@@ -43,7 +44,7 @@ jobs:
         run: docker build -t ${{ secrets.DOCKERHUB_URL }}:${{ github.sha }} .
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -67,15 +68,17 @@ jobs:
     environment: production
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: ${{ secrets.MANIFEST_REPO }}
           ref: ${{ secrets.MANIFEST_REPO_BRANCH }}
           token: ${{ secrets.MY_PAT }}
+
       - name: Configure git
         run: |
           git config user.email ${{ secrets.GIT_USER_EMAIL }} 
           git config user.name ${{ secrets.GIT_USER_NAME }}
+
       - name: Make changes
         run: |
           cd ${{ secrets.MANIFEST_FOLDER_NAME }}
@@ -107,6 +110,7 @@ jobs:
             yq eval -i ".spec.template.spec.containers[0].image = \"$IMAGE_TAG\"" $FILENAME
             yq eval -i ".spec.replicas = ${{ secrets.POD_REPLICAS }}" $FILENAME
           fi
+
       - name: Commit and Push
         run: |
           SHORT_SHA="${{ github.sha }}"
